# SqlExecutorMCP

./: .gitignore  LICENSE  config.template.json  pyproject.toml
src/mcp_server/: context.py  server.py
src/mcp_server/_dataclasses/: allowed_target.py  connection_config.py  query_result.py
src/mcp_server/_errors/: connection_error.py  permission_error.py  query_validation_error.py
src/mcp_server/connections/: base_adapter.py  connection_manager.py  mysql_adapter.py  sql_server_adapter.py
src/mcp_server/security/: allowlist.py  query_validator.py
src/mcp_server/tools/: tool_delete_statement.py  tool_describe_table.py  tool_drop_statement.py  tool_execute_query.py  tool_execute_statement.py  tool_get_schema.py  tool_list_databases.py  tool_list_tables.py  tools_manager.py
